Closes #1 bykka - serviceloader-maven-plugin windows issues